<resources>
    <item name="settings_button" type="id" />
    <item name="open_button" type="id" />
    <item name="recording_name" type="id" />
    <item name="transcribe_button" type="id" />
    <item name="operation_status" type="id" />
    <item name="operation_progress" type="id" />
    <item name="transcript_details" type="id" />
    <item name="search_input" type="id" />
    <item name="clear_search_button" type="id" />
    <item name="search_matches" type="id" />
    <item name="transcript_text" type="id" />
    <item name="content_scroll" type="id" />
    <item name="playback_position" type="id" />
    <item name="playback_seek" type="id" />
    <item name="play_button" type="id" />
    <item name="back_button" type="id" />
    <item name="forward_button" type="id" />
    <item name="document_trust" type="id"/>
    <item name="notes_button" type="id" />
    <item name="library_search" type="id" />
    <item name="library_cards" type="id" />
    <item name="library_status" type="id" />
    <item name="record_button" type="id" />
    <item name="capture_status" type="id" />
    <item name="capture_title" type="id" />
    <item name="capture_timer" type="id" />
    <item name="capture_start" type="id" />
    <item name="capture_pause" type="id" />
    <item name="capture_done" type="id" />
    <item name="transcript_draft" type="id" />
    <item name="more_button" type="id" />
    <item name="cancel_operation" type="id" />
    <item name="speaker_name_input" type="id" />
    <item name="speaker_remember" type="id" />
    <item name="speaker_people_list" type="id" />
    <item name="person_name_input" type="id" />
    <item name="speaker_merge_list" type="id" />
</resources>
